# SUKL-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_BACKLOG.md  Makefile  PRODUCT_SPECIFICATION.md  README.md  pyproject.toml  smithery.yaml  test_check_availability_hybrid.py  test_fastmcp_server.py  test_get_medicine_details_hybrid.py  test_hybrid_search.py  test_live_api.py  test_server_startup.py
SUKL-FastMCP/: README.md
SUKL-FastMCP/sukl-mcp-server/: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
SUKL-FastMCP/sukl-mcp-server/src/sukl_mcp/: __init__.py  client.py  models.py  server.py
SUKL-FastMCP/sukl-mcp-server/tests/: test_sukl_mcp.py
docs/: Phase-01-REST-API-Migration-Plan.md  README.md  api-reference.md  deployment.md  developer-guide.md  index.md  multi-server-setup.md  user-guide.md
src/sukl_mcp/: client_csv.py  exceptions.py  fuzzy_search.py  models.py  server.py
src/sukl_mcp/api/: __init__.py  client.py  models.py
sukl_mcp/: DEPLOYMENT_CHECKLIST.md  README.md  pyproject.toml
sukl_mcp/src/sukl_mcp/: __init__.py  client.py  client_csv.py  server.py
tests/: test_api_client.py  test_availability.py  test_fuzzy_search.py  test_hybrid_tools.py  test_price_calculator.py
