[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sukl-mcp-server"
version = "1.0.0"
description = "FastMCP server pro přístup k databázi léčiv SÚKL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Assistant" }
]
keywords = [
    "mcp",
    "fastmcp",
    "sukl",
    "medicines",
    "pharmacy",
    "healthcare",
    "czech",
    "api"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed"
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
server = [
    "uvicorn>=0.27.0",
]
all = [
    "sukl-mcp-server[dev,server]",
]

[project.scripts]
sukl-mcp = "sukl_mcp.server:main"

[project.urls]
Homepage = "https://github.com/example/sukl-mcp-server"
Documentation = "https://github.com/example/sukl-mcp-server#readme"
Repository = "https://github.com/example/sukl-mcp-server"
Issues = "https://github.com/example/sukl-mcp-server/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sukl_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require network)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/sukl_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["httpx.*", "fastmcp.*"]
ignore_missing_imports = true
